# agents-at-scale-ark

./: .all-contributorsrc  .ark.env.local  .cursorrules  .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  devspace.yaml  helpers.mk  package-lock.json  pyproject.toml  sonar-project.properties
.claude/commands/: ark-create-crd.md
.github/: CHANGELOG.md  CODEOWNERS  pull_request_template.md  release-please-config.json  release-please-manifest.json
.github/chainguard/: McK-Internal_golden-path-infrastructure-automation.sts.yaml
.github/k8s/: model-default.yaml.tpl  rbac-evaluator-access.yaml
.github/workflows/: cicd.yaml  deploy.yml  deploy_aws.yml  deploy_gcp.yml  sonar.yml  terraform_apply_aws.yml  terraform_apply_gcp.yml  terraform_plan_aws.yml  terraform_plan_gcp.yml
ark/: .dockerignore  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  PROJECT  README.md  devspace.yaml  go.mod  go.sum
ark/cmd/: main.go
ark/docs/: agent.md  contributing.md  crunchy-pgo.md  deployment.md  distribution.md  makefile.md  memory.md  observability.md
ark/hack/: boilerplate.go.txt
ark/samples/: a2aserver-agent-dependency.yaml
ark/scripts/: ark_ingress.yml  fix-helm-chart.sh
charts/ark-tenant/: Chart.yaml  README.md  values.yaml
demo/: evaluator-metric-rbac.yaml
docs/: next.config.mjs  package-lock.json  package.json
docs/app/: layout.jsx
docs/content/: _meta.js  disclaimer.mdx  index.mdx  quickstart.mdx
docs/diagrams/: high-level-architecture.drawio  icons.psd
docs/public/: contributors.html
docs/scripts/: check-links.js
evaluator-llm/: Dockerfile  README.md  build.mk  pyproject.toml
evaluator-llm/chart/: Chart.yaml  values.yaml
evaluator-llm/examples/: sample-evaluator-with-selector.yaml
evaluator-llm/tests/: test_integration_basic.py  test_types.py  test_unified_requests.py
infrastructure/samples/: github_oidc_assume_role_policy_example.json
lib/: lib.mk
lib/ark-sdk/: README.md  build.mk  crd_to_openapi.py  devspace.yaml  generate_ark_clients.py  install.sh  pyproject.toml  update_pyproject.py
lib/executor-common/: README.md  build.mk  pyproject.toml
lib/executor-common/src/executor_common/: __init__.py  app.py  base.py  types.py
mcp/filesys/: Dockerfile  Makefile  README.md  build.sh  config.json
samples/: README.md
samples/agent-hosting/hosted-langchain-agents/: .env.sample  Dockerfile  Makefile  README.md  pyproject.toml
samples/agent-hosting/hosted-langchain-agents/chart/: Chart.yaml  values.yaml
samples/agent-hosting/hosted-langchain-agents/chart/templates/: a2aserver.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
samples/agent-hosting/hosted-langchain-agents/src/hosted_langchain_agents/: __init__.py  __main__.py  a2a_server.py  langchain_agents.py  weather_tools.py
samples/agents/: amazed.yaml  blog.yaml  filesystem.yaml  json-output-agent.yaml  location.yaml  math.yaml  (+5 more)
samples/agents-as-tools/: coordinator-example.yaml
samples/rag-external-vectordb/retrieval-service/: Dockerfile  README.md  pyproject.toml
samples/rag-external-vectordb/retrieval-service/deployment/: azure-openai-secret.yaml  deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
samples/rag-external-vectordb/retrieval-service/src/: rest_server.py
scripts/: build-and-push.sh  chainsaw_summary.py  configure-bedrock-model.sh  default-setup.sh  migrate.sh  query.sh  quickstart-reconfigure-default-model.sh  quickstart.sh  services.sh  show-help.py  tls-certs.sh
services/: .dockerignore  README.md  services.mk
services/ark-api-a2a/: .gitignore  Dockerfile  build.mk  devspace.yaml  manifest.yaml  pyproject.toml  sync-ark-sdk.sh
services/ark-api-a2a/chart/: Chart.yaml  values.yaml
services/ark-api-a2a/chart/templates/: deployment.yaml  httproute.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
services/ark-api-a2a/src/a2agw/: __main__.py  execution.py  main.py  registry.py
services/ark-api-a2a/tests/: test_execution.py  test_manager.py  test_registry.py
services/evaluator-llm/: Dockerfile  README.md  build  build.mk  build.sh  pyproject.toml  pyproject.toml.bak
services/evaluator-llm/chart/: Chart.yaml  values.yaml
services/evaluator-llm/chart/templates/: deployment.yaml  evaluator.yaml  pdb.yaml  role.yaml  rolebinding.yaml  service.yaml
services/evaluator-llm/examples/: query-with-evaluator.yaml  sample-evaluator.yaml
services/evaluator-llm/src/evaluator_llm/: __main__.py  app.py  evaluator.py  llm_client.py  types.py
services/evaluator-llm/src/evaluator_llm/helpers/: __init__.py  agent_helper.py  event_analyzer.py  integration_guide.py  llm_helper.py  query_helper.py  team_helper.py  tool_helper.py  types.py
services/evaluator-llm/src/evaluator_llm/providers/: base.py  direct_evaluation.py  factory.py
services/evaluator-llm/tests/: test_end_to_end.py  test_final_validation.py  test_helpers_fixed.py
services/evaluator-llm/tests/providers/: conftest.py  test_baseline_evaluation.py  test_batch_evaluation.py  test_direct_evaluation.py  test_event_evaluation.py  test_query_evaluation.py
services/evaluator-metric/: Dockerfile  README.md  build.mk  pyproject.toml  pyproject.toml.bak
services/evaluator-metric/chart/: Chart.yaml  values.yaml
services/evaluator-metric/chart/templates/: _helpers.tpl  deployment.yaml  evaluator.yaml  pdb.yaml  rbac.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
services/evaluator-metric/examples/: README.md  batch-evaluator.yaml  development-evaluator.yaml  production-evaluator.yaml  sample-cost-evaluator.yaml  sample-evaluator.yaml  sample-performance-evaluator.yaml  test-queries.yaml
services/evaluator-metric/src/evaluator_metric/: app.py  ark_client.py  evaluator.py  metrics.py  query_resolver.py  types.py
services/evaluator-metric/tests/: test_ark_client.py  test_metric_types.py  test_query_resolver.py  test_types.py  test_unified_endpoints.py
tests/: .chainsaw-evaluated.yaml  .chainsaw.yaml  CLAUDE.md  README.md  chainsaw.yml
tools/: tools.mk
(+1706 files in other folders)
