[project]
name = "executor-common"
version = "0.1.32"
description = "Common utilities and types for execution engine services"
authors = [
    {name = "McKinsey Agent Platform Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "build",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.402",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/executor_common"]